# light-curve-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  DOCS_PLAN.md  README.md  mkdocs.yml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/docs-site/: 404.html
.github/workflows/: docs-preview-build.yml  docs-preview-deploy.yml  docs-preview.yml  docs.yml  nightly.yml  publish.yml  publish_python.yml  test.yml  weekly.yml
docs/: CNAME  changelog.md  citing.md  conf.py  hooks.py  index.md  index.rst  installation.md  light_curve.light_curve_py.features.rst  light_curve.light_curve_py.rst  light_curve.rst  modules.rst  requirements.txt
docs/developer/: contributing.md
docs/dmdt/: api.md  index.md  tutorial.ipynb
docs/embed/: api.md  classification.ipynb  index.md  onnxruntime.md  tutorial.ipynb
docs/embed/pre-executed/: classification.ipynb  similarity_search.ipynb
docs/features/: api.md  basics.ipynb  batch_processing.ipynb  fitting.ipynb  index.md  multiband.ipynb  periodogram.ipynb  rainbow.ipynb
docs/features/api/: base.md  detection.md  fitting.md  index.md  linear.md  meta.md  multiband.md  periodogram.md  rainbow.md  statistical.md  time.md  variability.md
docs/features/multiband/: index.md  tutorial.ipynb
docs/javascripts/: katex.js
docs/stylesheets/: extra.css
docs/templates/python/material/: class.html.jinja
light-curve/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
light-curve-python/: README.md  pyproject.toml  setup.cfg  setup.py
light-curve/docs/light_curve/: index.html
light-curve/light_curve/: __init__.py  light_curve_ext.py
light-curve/light_curve/embed/: __init__.py  astra_clr.py  astromer.py  atat.py  atcat.py  chronos.py  input_tensors.py  model.py  moment.py  reduction.py  time_reduction.py
light-curve/light_curve/light_curve_py/: __init__.py  dataclass_field.py  minuit_lsq.py  minuit_ml.py  warnings.py
light-curve/light_curve/light_curve_py/features/: __init__.py  _base.py  _base_meta.py  _lstsq.py  adnormal.py  amplitude.py  beyondnstd.py  bins.py  color_of_median.py  cusum.py  eta.py  etae.py  excvar.py  extractor.py  flux_n_not_det_before_fd.py  intpercrange.py  kurtosis.py  linfit.py  lintrend.py  magnitude_n_not_det_before_fd.py  magnpratio.py  maxslope.py  mean.py  meanvar.py  medabsdev.py  medbufrperc.py  median.py  mendoza_fit.py  otsusplit.py  pdiffmperc.py  percampl.py  ptp_var.py  rainbow.py  rainbow_rising.py  red_dwarf_fit.py  redchi2.py  roms.py  skew.py  stdev.py  stetsonk.py  (+1 more)
light-curve/light_curve/light_curve_py/features/rainbow/: __init__.py  _bands.py  _base.py  _parameters.py  _scaler.py  bazin.py  bolometric.py  generic.py  rising.py  spectral.py  symmetric.py  temperature.py
light-curve/light_curve/light_curve_py/features/rainbow/.ipynb_checkpoints/: _base-checkpoint.py  bolometric-checkpoint.py  generic-checkpoint.py  temperature-checkpoint.py
light-curve/src/: arrow_input.rs  check.rs  cont_array.rs  dmdt.rs  errors.rs  features.rs  lib.rs  ln_prior.rs  np_array.rs  transform.rs
light-curve/tests/: conftest.py  test_embed.py  test_w_bench.py
light-curve/tests/embed/: conftest.py  test_astra_clr.py  test_astromer.py  test_atat.py  test_atcat.py  test_chronos.py  test_model.py  test_moment.py  test_reduction.py
light-curve/tests/light_curve_ext/: test_arrow_input.py  test_dmdt.py  test_equality.py  test_feature.py  test_ln_prior.py  test_periodogram.py
light-curve/tests/light_curve_py/: test_adnormal.py  test_amplitude.py  test_beyondnstd.py  test_bins.py  test_call.py  test_cusum.py  test_equality.py  test_eta.py  test_etae.py  test_excvar.py  test_extractor.py  test_intpercrange.py  test_kurtosis.py  test_linfit.py  test_lintrend.py  test_magnpratio.py  test_maxslope.py  test_mean.py  test_meanvar.py  test_medabsdev.py  test_medbufrperc.py  test_median.py  test_n_not_det_before_df.py  test_n_not_det_before_fd.py  test_otsusplit.py  test_pdiffmperc.py  test_percampl.py  test_redchi2.py  test_single_band.py  test_skew.py  test_stdev.py  test_stetsonk.py  test_weightmean.py
light-curve/tests/light_curve_py/features/: test_beyondnstd.py  test_bins.py  test_color_of_median.py  test_extractor.py  test_intpercrange.py  test_magnpratio.py  test_n_not_det_before_fd.py  test_pdiffmperc.py  test_ptp_var.py  test_rainbow.py  test_rainbow_derivatives.py  test_rainbow_rising.py  test_rainbow_symmetric.py  test_roms.py
