[package]
name = "light-curve-python"
version = "0.9.4"
authors = ["Konstantin Malanchev <hombit@gmail.com>", "Anastasia Lavrukhina <lavrukhina.ad@gmail.com>", "Sergey Karpov", "Etienne Russeil"]
description = "Feature extractor from noisy time series"
readme = "README.md"
repository = "https://github.com/light-curve/light-curve-python"
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.67"

[lib]
name = "light_curve"
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[features]
default = ["abi3", "ceres-source", "fftw-source", "gsl", "mimalloc"]
abi3 = ["pyo3/abi3-py38"]
ceres-source = ["light-curve-feature/ceres-source"]
ceres-system = ["light-curve-feature/ceres-system"]
fftw-source = ["light-curve-feature/fftw-source"]
fftw-system = ["light-curve-feature/fftw-system"]
fftw-mkl = ["light-curve-feature/fftw-mkl"]
gsl = ["light-curve-feature/gsl"]
mimalloc = ["dep:mimalloc"]

[dependencies]
const_format = "0.2.32"
conv = "0.3.3"
enum-iterator = "2.1.0"
enumflags2 = { version = "0.7.7", features = ["serde"] }
itertools = "0.13.0"
macro_const = "0.1.0"
mimalloc = { version = "0.1.42", features = ["local_dynamic_tls"], optional = true }
ndarray = { version = "0.15.3", features = ["rayon"] }
numpy = "0.21.0"
num_cpus = "1.13.0"
num-traits = "0.2"
once_cell = "1"
pyo3 = { version = "0.21.2", features = ["extension-module", "multiple-pymethods", "gil-refs"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde-pickle = "1"
serde_json = "1"
thiserror = "1.0.63"
unzip3 = "1.0.0"

[dependencies.light-curve-dmdt]
version = "0.7.1"
features = ["serde"]

[dependencies.light-curve-feature]
version = "0.7.1"
default_features = false
