[package]
name = "light-curve-python"
version = "0.11.0"
authors = [
    "Konstantin Malanchev <hombit@gmail.com>",
    "Anastasia Lavrukhina <lavrukhina.ad@gmail.com>",
    "Sergey Karpov",
    "Etienne Russeil",
]
description = "Feature extractor from noisy time series"
readme = "README.md"
repository = "https://github.com/light-curve/light-curve-python"
license = "GPL-3.0-or-later"
edition = "2024"
rust-version = "1.85"

[lib]
name = "light_curve"
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = "warn"

[profile.release]
lto = true
codegen-units = 1

[features]
default = ["abi3", "ceres-source", "gsl", "mimalloc"]
abi3 = ["pyo3/abi3-py310"]
ceres-source = ["light-curve-feature/ceres-source"]
ceres-system = ["light-curve-feature/ceres-system"]
mkl = ["light-curve-feature/fftw-mkl"]
gsl = ["light-curve-feature/gsl"]
mimalloc = ["dep:mimalloc"]

[dependencies]
const_format = "0.2.35"
conv = "0.3.3"
enum-iterator = "2.3.0"
enumflags2 = { version = "0.7.12", features = ["serde"] }
itertools = "0.14.0"
macro_const = "0.1.0"
mimalloc = { version = "0.1.48", features = [
    "local_dynamic_tls",
], optional = true }
ndarray = { version = "0.17.0", features = ["rayon"] }
numpy = "0.28.0"
num_cpus = "1.17.0"
num-traits = "0.2"
once_cell = "1"
pyo3 = { version = "0.28.0", features = [
    "extension-module",
    "multiple-pymethods",
] }
rand = "0.9.2"
rand_xoshiro = "0.7.0"
rayon = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde-pickle = "1"
serde_json = "1"
thiserror = "2"
unarray = "0.1.4"
unzip3 = "1.0.0"

[dependencies.light-curve-dmdt]
version = "0.9.0"
features = ["serde"]

[dependencies.light-curve-feature]
version = "0.12.0"
default-features = false
